--- a/OperacionesMatematicas/MainWindow.xaml
+++ b/OperacionesMatematicas/MainWindow.xaml
@@ -5,20 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OperacionesMatematicas"
         mc:Ignorable="d"
-        Title="Operaciones Matematicas" Height="450" Width="800">
+        Title="Operaciones Matematicas" Height="450" Width="800" Icon="calculadora.ico">
     <Grid>
-        <GroupBox Header="Operaciones" HorizontalAlignment="Left" Height="145" Margin="51,156,0,0" VerticalAlignment="Top" Width="157"/>
-        <RadioButton x:Name="RadioSuma" Content="Suma" HorizontalAlignment="Left" Margin="82,192,0,0" VerticalAlignment="Top"/>
-        <RadioButton x:Name="RadioResta" Content="Resta" HorizontalAlignment="Left" Margin="82,213,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.043,0.8"/>
-        <RadioButton x:Name="RadioMultiplicacion" Content="Multiplicación" HorizontalAlignment="Left" Margin="82,237,0,0" VerticalAlignment="Top"/>
-        <RadioButton x:Name="RadioDivision" Content="División" HorizontalAlignment="Left" Margin="82,260,0,0" VerticalAlignment="Top"/>
-        <TextBlock HorizontalAlignment="Left" Margin="264,173,0,0" TextWrapping="Wrap" Text="Operando 1" VerticalAlignment="Top"/>
-        <TextBlock HorizontalAlignment="Left" Margin="264,236,0,0" TextWrapping="Wrap" Text="Operando 2" VerticalAlignment="Top" RenderTransformOrigin="0.508,3.375"/>
-        <TextBox x:Name="Operando1" Height="23" Margin="264,192,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120" HorizontalAlignment="Left" FlowDirection="RightToLeft"/>
-        <TextBox x:Name="Operando2" Height="23" Margin="264,260,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120" HorizontalAlignment="Left" FlowDirection="RightToLeft"/>
-        <TextBlock HorizontalAlignment="Left" Margin="583,215,0,0" TextWrapping="Wrap" Text="Resultado" VerticalAlignment="Top"/>
-        <TextBox x:Name="ResultadoOperando" HorizontalAlignment="Left" Height="23" Margin="583,231,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="0" FlowDirection="RightToLeft"/>
-        <Button Content="Limpiar" HorizontalAlignment="Left" Margin="51,346,0,0" VerticalAlignment="Top" Width="92" Height="23"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="23*"/>
+            <ColumnDefinition Width="26*"/>
+            <ColumnDefinition Width="347*"/>
+        </Grid.ColumnDefinitions>
+        <GroupBox x:Name="Operaciones" Header="Operaciones" HorizontalAlignment="Left" Height="145" Margin="5,156,0,0" VerticalAlignment="Top" Width="157" Grid.Column="1" Grid.ColumnSpan="2"/>
+        <RadioButton x:Name="RadioSuma" Content="Suma" HorizontalAlignment="Left" Margin="36,192,0,0" VerticalAlignment="Top" Grid.Column="1" Grid.ColumnSpan="2" Checked="RadioSuma_Checked"/>
+        <RadioButton x:Name="RadioResta" Content="Resta" HorizontalAlignment="Left" Margin="36,213,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.043,0.8" Grid.Column="1" Grid.ColumnSpan="2" Checked="RadioResta_Checked"/>
+        <RadioButton x:Name="RadioMultiplicacion" Content="Multiplicación" HorizontalAlignment="Left" Margin="36,237,0,0" VerticalAlignment="Top" Grid.Column="1" Grid.ColumnSpan="2" Checked="RadioMultiplicacion_Checked"/>
+        <RadioButton x:Name="RadioDivision" Content="División" HorizontalAlignment="Left" Margin="36,260,0,0" VerticalAlignment="Top" Grid.Column="1" Grid.ColumnSpan="2" Checked="RadioDivision_Checked"/>
+        <TextBlock HorizontalAlignment="Left" Margin="166,173,0,0" TextWrapping="Wrap" Text="Operando 1" VerticalAlignment="Top" Grid.Column="2"/>
+        <TextBlock HorizontalAlignment="Left" Margin="166,236,0,0" TextWrapping="Wrap" Text="Operando 2" VerticalAlignment="Top" RenderTransformOrigin="0.508,3.375" Grid.Column="2"/>
+        <TextBox x:Name="Operando1" Height="23" Margin="166,192,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120" HorizontalAlignment="Left" FlowDirection="RightToLeft" Grid.Column="2" TextChanged="Operando1_TextChanged"/>
+        <TextBox x:Name="Operando2" Height="23" Margin="166,258,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120" HorizontalAlignment="Left" FlowDirection="RightToLeft" Grid.Column="2" TextChanged="Operando2_TextChanged"/>
+        <TextBlock HorizontalAlignment="Left" Margin="485,215,0,0" TextWrapping="Wrap" Text="Resultado" VerticalAlignment="Top" Grid.Column="2"/>
+        <TextBox x:Name="ResultadoOperando" HorizontalAlignment="Left" Height="23" Margin="485,231,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="0" FlowDirection="RightToLeft" Grid.Column="2"/>
+        <Button Content="Limpiar" HorizontalAlignment="Left" Margin="5,346,0,0" VerticalAlignment="Top" Width="92" Height="23" Grid.Column="1" Grid.ColumnSpan="2" Click="Button_Click"/>
 
     </Grid>
 </Window>
