--- a/OperacionesMatematicas/MainWindow.xaml
+++ b/OperacionesMatematicas/MainWindow.xaml
@@ -5,24 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OperacionesMatematicas"
         mc:Ignorable="d"
-        Title="Operaciones Matematicas" Height="450" Width="800" Icon="calculadora.ico">
+        Title="Operaciones Matematicas" Height="450" Width="800" Icon="calc.ico">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="23*"/>
-            <ColumnDefinition Width="26*"/>
-            <ColumnDefinition Width="347*"/>
+            <ColumnDefinition Width="46*"/>
+            <ColumnDefinition Width="52*"/>
+            <ColumnDefinition Width="137*"/>
+            <ColumnDefinition Width="557*"/>
         </Grid.ColumnDefinitions>
-        <GroupBox x:Name="Operaciones" Header="Operaciones" HorizontalAlignment="Left" Height="145" Margin="5,156,0,0" VerticalAlignment="Top" Width="157" Grid.Column="1" Grid.ColumnSpan="2"/>
+        <GroupBox x:Name="Operaciones" Header="Operaciones" HorizontalAlignment="Left" Height="145" Margin="19,159,0,0" VerticalAlignment="Top" Width="157" Grid.Column="1" Grid.ColumnSpan="2"/>
         <RadioButton x:Name="RadioSuma" Content="Suma" HorizontalAlignment="Left" Margin="36,192,0,0" VerticalAlignment="Top" Grid.Column="1" Grid.ColumnSpan="2" Checked="RadioSuma_Checked"/>
         <RadioButton x:Name="RadioResta" Content="Resta" HorizontalAlignment="Left" Margin="36,213,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.043,0.8" Grid.Column="1" Grid.ColumnSpan="2" Checked="RadioResta_Checked"/>
         <RadioButton x:Name="RadioMultiplicacion" Content="Multiplicación" HorizontalAlignment="Left" Margin="36,237,0,0" VerticalAlignment="Top" Grid.Column="1" Grid.ColumnSpan="2" Checked="RadioMultiplicacion_Checked"/>
         <RadioButton x:Name="RadioDivision" Content="División" HorizontalAlignment="Left" Margin="36,260,0,0" VerticalAlignment="Top" Grid.Column="1" Grid.ColumnSpan="2" Checked="RadioDivision_Checked"/>
-        <TextBlock HorizontalAlignment="Left" Margin="166,173,0,0" TextWrapping="Wrap" Text="Operando 1" VerticalAlignment="Top" Grid.Column="2"/>
-        <TextBlock HorizontalAlignment="Left" Margin="166,236,0,0" TextWrapping="Wrap" Text="Operando 2" VerticalAlignment="Top" RenderTransformOrigin="0.508,3.375" Grid.Column="2"/>
-        <TextBox x:Name="Operando1" Height="23" Margin="166,192,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120" HorizontalAlignment="Left" FlowDirection="RightToLeft" Grid.Column="2" TextChanged="Operando1_TextChanged"/>
-        <TextBox x:Name="Operando2" Height="23" Margin="166,258,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120" HorizontalAlignment="Left" FlowDirection="RightToLeft" Grid.Column="2" TextChanged="Operando2_TextChanged"/>
-        <TextBlock HorizontalAlignment="Left" Margin="485,215,0,0" TextWrapping="Wrap" Text="Resultado" VerticalAlignment="Top" Grid.Column="2"/>
-        <TextBox x:Name="ResultadoOperando" HorizontalAlignment="Left" Height="23" Margin="485,231,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="0" FlowDirection="RightToLeft" Grid.Column="2"/>
+        <TextBlock HorizontalAlignment="Left" Margin="29,173,0,0" TextWrapping="Wrap" Text="Operando 1" VerticalAlignment="Top" Grid.Column="3"/>
+        <TextBlock HorizontalAlignment="Left" Margin="29,236,0,0" TextWrapping="Wrap" Text="Operando 2" VerticalAlignment="Top" RenderTransformOrigin="0.508,3.375" Grid.Column="3"/>
+        <TextBox x:Name="Operando1" Height="23" Margin="29,192,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120" HorizontalAlignment="Left" FlowDirection="RightToLeft" Grid.Column="3" TextChanged="Operando_TextChanged"/>
+        <TextBox x:Name="Operando2" Height="23" Margin="29,258,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120" HorizontalAlignment="Left" FlowDirection="RightToLeft" Grid.Column="3" TextChanged="Operando_TextChanged"/>
+        <TextBlock HorizontalAlignment="Left" Margin="348,215,0,0" TextWrapping="Wrap" Text="Resultado" VerticalAlignment="Top" Grid.Column="3"/>
+        <TextBox x:Name="ResultadoOperando" HorizontalAlignment="Left" Height="23" Margin="348,231,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Text="0" FlowDirection="RightToLeft" Grid.Column="3"/>
         <Button Content="Limpiar" HorizontalAlignment="Left" Margin="5,346,0,0" VerticalAlignment="Top" Width="92" Height="23" Grid.Column="1" Grid.ColumnSpan="2" Click="Button_Click"/>
 
     </Grid>
